--- a/index.html
+++ b/index.html
@@ -7,10 +7,13 @@
     <style>
         body {
             font-family: Arial, sans-serif;
-            margin: 0;
+            margin: 9px; /* Space for border */
             padding: 0;
             text-align: center;
             background-color: #f4f4f4;
+            border: 9px solid black; /* ~1/8 inch border */
+            box-sizing: border-box;
+            min-height: 100vh; /* Ensure border frames full height */
         }
         header {
             background-color: #333;
@@ -43,8 +46,8 @@
             color: white;
             padding: 1em;
             position: fixed;
-            bottom: 0;
-            width: 100%;
+            bottom: 9px; /* Adjusted for border */
+            width: calc(100% - 18px); /* Adjusted for border width */
         }
     </style>
 </head>
@@ -72,7 +75,7 @@
     </div>
     
     <footer>
-        <p>&copy; 2025 My Website. All rights reserved.</p>
+        <p>© 2025 My Website. All rights reserved.</p>
     </footer>
 </body>
 </html>
