--- a/home/home.html
+++ b/home/home.html
@@ -17,8 +17,8 @@
         body {
             font-family: Arial, sans-serif;
             background-image: 
-                url('images/MapCrest.png'),
-                url('images/MapCrest.png');
+                url('../format_images/MapCrest.png'),
+                url('../format_images/MapCrest.png');
             background-size: 160px 138.56px;
             background-position: 
                 center,
@@ -305,8 +305,8 @@
             <a href="#"></a>
             <a href="#"></a>
             <a href="#"></a>
-            <a href="#"></a>
-            <a href="#"></a>
+            <a href="ALS6/ALS6.html"></a>
+            <a href="ALS7/ALS7.html"></a>
             <a href="#">ALS8</a>
         </div>
     </div>
