Updated button links

--- a/home/home.html
+++ b/home/home.html
@@ -5,7 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta name="description" content="Join the Alchemy AOE Community for Age of Empires map resources, competitions, and more.">
     <meta name="keywords" content="Age of Empires, AOE, community, maps, competitions">
-    <link rel="icon" href="images/favicon.ico" type="image/x-icon">
+    <link rel="icon" href="../images/favicon.ico" type="image/x-icon">
     <title>Alchemy AOE Community</title>
     <style>
         * {
@@ -94,8 +94,8 @@
         .nav-group.seasons::after { background-image: url('images/Season_Mashup.jpg'); }
         .nav-group.about { grid-area: about; }
         .nav-group.mission { grid-area: mission; }
-        .nav-group.maps { grid-area: people; }
-        .nav-group.people { grid-area: maps; }
+        .nav-group.maps { grid-area: maps; }
+        .nav-group.people { grid-area: people; }
         .nav-group.docs { grid-area: docs; }
         .nav-group.refs { grid-area: refs; }
         .nav-group.seasons { 
@@ -176,6 +176,10 @@
             align-items: center;
             justify-content: center;
             text-align: center;
+            color: white;
+            text-shadow: 1px 1px 2px black;
+            min-width: 100px;
+            cursor: pointer;
         }
         .nav-group.seasons a:nth-child(2) { background-image: url('images/ALS1_Banner.png'); }
         .nav-group.seasons a:nth-child(3) { background-image: url('images/ALS2_Banner.png'); }
@@ -259,7 +263,6 @@
             <p>
             We are independent from the official Age of Empires developers, allowing us to prioritize creativity and free expression over marketing returns.
             </p>
-
         </div>
         <div class="nav-group mission" aria-label="Our Mission section" role="region">
             <div class="title-bar"><h3>OUR MISSION</h3></div>
@@ -281,7 +284,7 @@
         </div>
         <div class="nav-group people" aria-label="People section" role="region">
             <div class="title-bar"><h3>PEOPLE</h3></div>
-            <a href="Map_Team.html">Map Scripters</a>
+            <a href="../Map_Team.html">Map Scripters</a>
             <a href="#">Map Quality Team</a>
             <a href="#">Content Creators</a>
         </div>
@@ -300,13 +303,13 @@
         </div>
         <div class="nav-group seasons" aria-label="Competitions section" role="region">
             <div class="title-bar"><h3>COMPETITIONS</h3></div>
-            <a href="#"></a>
-            <a href="#"></a>
-            <a href="#"></a>
-            <a href="#"></a>
-            <a href="#"></a>
-            <a href="ALS6/ALS6.html"></a>
-            <a href="ALS7/ALS7.html"></a>
+            <a href="../ALS1/ALS1.html">ALS1</a>
+            <a href="../ALS2/ALS2.html">ALS2</a>
+            <a href="../ALS3/ALS3.html"></a>
+            <a href="../ALS4/ALS4.html"></a>
+            <a href="../ALS5/ALS5.html"></a>
+            <a href="../ALS6/ALS6.html"></a>
+            <a href="../ALS7/ALS7.html"></a>
             <a href="#">ALS8</a>
         </div>
     </div>
