Update resource links

--- a/ALS7.html
+++ b/ALS7.html
@@ -588,7 +588,7 @@
         <div class="nav-group summary" aria-label="Summary section" role="region">
             <div class="title-bar"><h3>SUMMARY</h3></div>
             <div class="content">
-                <p>Civilization Draft: <a href="https://aoe2cm.net/preset/EjvqT">https://aoe2cm.net/preset/EjvqT</a></p>
+                <p>Civilization Draft: <a href="https://aoe2cm.net/preset/EjvqT" target="_blank">https://aoe2cm.net/preset/EjvqT</a></p>
                 <p></p>
                 <p></p>
             </div>
@@ -652,7 +652,7 @@
                         <text x="68" y="31.02" class="hierarchy-text">CSRM-ESR-04</text>
                     </a>
                     <a href="#" data-folder="CHEM-CSRM-ESR-05" target="_blank" tabindex="0" aria-label="CSRM-ESR-05" role="button" class="pdf-link">
-                        <rect x="81.9" y="25.92" width="10.2" height="10.2" class="hierarchy-node"/>
+                        <rect x="81.9" y="şe25.92" width="10.2" height="10.2" class="hierarchy-node"/>
                         <text x="87" y="31.02" class="hierarchy-text">CSRM-ESR-05</text>
                     </a>
                     <!-- Second Row CSRM Nodes -->
@@ -755,12 +755,12 @@
                         <div class="content">
                             <div class="button-container">
                                 <div class="resources-buttons">
-                                    <a href="ALS7_Resources/Sprint1/_Registration.ods">Registration</a>
-                                    <a href="ALS7_Resources/Sprint1/_Seeding_Summary.ods">Seeding Summary</a>
-                                    <a href="ALS7_Resources/Sprint1/_Seeding_Apparent.ods">Seeding Apparent</a>
-                                    <a href="ALS7_Resources/Sprint1/_Seeding_Full.ods">Seeding Full</a>
-                                    <a href="ALS7_Resources/Sprint1/_Round_by_Round.ods">Roundwise</a>
-                                    <a href="https://docs.google.com/spreadsheets/d/1ytlURpxM8D7gZumt6dKuoAHMSD3z-lRZRLEzTAGaG8w">Live Scoreboard</a>
+                                    <a href="ALS7_Resources/Sprint1/_Registration.ods" target="_blank">Registration</a>
+                                    <a href="ALS7_Resources/Sprint1/_Seeding_Summary.ods" target="_blank">Seeding Summary</a>
+                                    <a href="ALS7_Resources/Sprint1/_Seeding_Apparent.ods" target="_blank">Seeding Apparent</a>
+                                    <a href="ALS7_Resources/Sprint1/_Seeding_Full.ods" target="_blank">Seeding Full</a>
+                                    <a href="ALS7_Resources/Sprint1/_Round_by_Round.ods" target="_blank">Roundwise</a>
+                                    <a href="https://docs.google.com/spreadsheets/d/1ytlURpxM8D7gZumt6dKuoAHMSD3z-lRZRLEzTAGaG8w" target="_blank">Live Scoreboard</a>
                                 </div>
                             </div>
                         </div>
@@ -792,12 +792,12 @@
                         <div class="content">
                             <div class="button-container">
                                 <div class="resources-buttons">
-                                    <a href="ALS7_Resources/Sprint2/_Registration.ods">Registration</a>
-                                    <a href="ALS7_Resources/Sprint2/_Seeding_Summary.ods">Seeding Summary</a>
-                                    <a href="ALS7_Resources/Sprint2/_Seeding_Apparent.ods">Seeding Apparent</a>
-                                    <a href="ALS7_Resources/Sprint2/_Seeding_Full.ods">Seeding Full</a>
-                                    <a href="ALS7_Resources/Sprint2/_Round_by_Round.ods">Roundwise</a>
-                                    <a href="#">Live Scoreboard</a>
+                                    <a href="ALS7_Resources/Sprint2/_Registration.ods" target="_blank">Registration</a>
+                                    <a href="ALS7_Resources/Sprint2/_Seeding_Summary.ods" target="_blank">Seeding Summary</a>
+                                    <a href="ALS7_Resources/Sprint2/_Seeding_Apparent.ods" target="_blank">Seeding Apparent</a>
+                                    <a href="ALS7_Resources/Sprint2/_Seeding_Full.ods" target="_blank">Seeding Full</a>
+                                    <a href="ALS7_Resources/Sprint2/_Round_by_Round.ods" target="_blank">Roundwise</a>
+                                    <a href="#" target="_blank">Live Scoreboard</a>
                                 </div>
                             </div>
                         </div>
@@ -852,9 +852,9 @@
                     </tr>
                 </table>
                 <div class="quicklinks-buttons">
-                    <a href="ALS7_Resources/Map_Contest.ods" role="button" aria-label="Contest">Contest</a>
-                    <a href="https://aoe2cm.net/preset/nOxHA" role="button" aria-label="Draft">Draft</a>
-                    <a href="ALS7_Resources/Map_Archive.zip" role="button" aria-label="Archive">Archive</a>
+                    <a href="ALS7_Resources/Map_Contest.ods" target="_blank" role="button" aria-label="Contest">Contest</a>
+                    <a href="https://aoe2cm.net/preset/nOxHA" target="_blank" role="button" aria-label="Draft">Draft</a>
+                    <a href="ALS7_Resources/Map_Archive.zip" target="_blank" role="button" aria-label="Archive">Archive</a>
                 </div>
             </div>
         </div>
