--- a/ALS7.html
+++ b/ALS7.html
@@ -755,7 +755,7 @@
                         <div class="content">
                             <div class="button-container">
                                 <div class="resources-buttons">
-                                    <a href="ALS7_Resources/Sprint1/_Registration.ods" target="_blank">Registration</a>
+                                    <a href="https://github.com/Alchemy-AOE-Community/Alchemy-AOE-Community.github.io/blob/main/ALS7_Resources/Sprint1/_Registration.ods" target="_blank">Registration</a>
                                     <a href="ALS7_Resources/Sprint1/_Seeding_Summary.ods" target="_blank">Seeding Summary</a>
                                     <a href="ALS7_Resources/Sprint1/_Seeding_Apparent.ods" target="_blank">Seeding Apparent</a>
                                     <a href="ALS7_Resources/Sprint1/_Seeding_Full.ods" target="_blank">Seeding Full</a>
