--- a/ALS7.html
+++ b/ALS7.html
@@ -652,7 +652,7 @@
                         <text x="68" y="31.02" class="hierarchy-text">CSRM-ESR-04</text>
                     </a>
                     <a href="#" data-folder="CHEM-CSRM-ESR-05" target="_blank" tabindex="0" aria-label="CSRM-ESR-05" role="button" class="pdf-link">
-                        <rect x="81.9" y="şe25.92" width="10.2" height="10.2" class="hierarchy-node"/>
+                        <rect x="81.9" y="25.92" width="10.2" height="10.2" class="hierarchy-node"/>
                         <text x="87" y="31.02" class="hierarchy-text">CSRM-ESR-05</text>
                     </a>
                     <!-- Second Row CSRM Nodes -->
@@ -755,12 +755,12 @@
                         <div class="content">
                             <div class="button-container">
                                 <div class="resources-buttons">
-                                    <a href="https://github.com/Alchemy-AOE-Community/Alchemy-AOE-Community.github.io/blob/main/ALS7_Resources/Sprint1/_Registration.ods" target="_blank">Registration</a>
-                                    <a href="ALS7_Resources/Sprint1/_Seeding_Summary.ods" target="_blank">Seeding Summary</a>
-                                    <a href="ALS7_Resources/Sprint1/_Seeding_Apparent.ods" target="_blank">Seeding Apparent</a>
-                                    <a href="ALS7_Resources/Sprint1/_Seeding_Full.ods" target="_blank">Seeding Full</a>
-                                    <a href="ALS7_Resources/Sprint1/_Round_by_Round.ods" target="_blank">Roundwise</a>
-                                    <a href="https://docs.google.com/spreadsheets/d/1ytlURpxM8D7gZumt6dKuoAHMSD3z-lRZRLEzTAGaG8w" target="_blank">Live Scoreboard</a>
+                                    <a href="https://raw.githubusercontent.com/Alchemy-AOE-Community/Alchemy-AOE-Community.github.io/main/ALS7_Resources/Sprint1/_Registration.ods"     target="_blank" download>Registration</a> 
+                                    <a href="https://raw.githubusercontent.com/Alchemy-AOE-Community/Alchemy-AOE-Community.github.io/main/ALS7_Resources/Sprint1/_Seeding_Summary.ods"  target="_blank" download>Seeding Summary</a>
+                                    <a href="https://raw.githubusercontent.com/Alchemy-AOE-Community/Alchemy-AOE-Community.github.io/main/ALS7_Resources/Sprint1/_Seeding_Apparent.ods" target="_blank" download>Seeding Apparent</a>
+                                    <a href="https://raw.githubusercontent.com/Alchemy-AOE-Community/Alchemy-AOE-Community.github.io/main/ALS7_Resources/Sprint1/_Seeding_Full.ods"     target="_blank" download>Seeding Full</a>
+                                    <a href="https://raw.githubusercontent.com/Alchemy-AOE-Community/Alchemy-AOE-Community.github.io/main/ALS7_Resources/Sprint1/_Round_by_Round.ods"   target="_blank" download>Roundwise</a>
+                                    <a href="https://docs.google.com/spreadsheets/d/1ytlURpxM8D7gZumt6dKuoAHMSD3z-lRZRLEzTAGaG8w"                                                       target="_blank">Live Scoreboard</a>
                                 </div>
                             </div>
                         </div>
