--- a/index.html
+++ b/index.html
@@ -8,6 +8,115 @@
     <link rel="icon" href="images/favicon.ico" type="image/x-icon">
     <link rel="stylesheet" href="style/style.css" />
     <title>Alchemy AOE Community</title>
+    <style>
+        * {
+            margin: 0;
+            padding: 0;
+            box-sizing: border-box;
+        }
+        html, body {
+            height: 1080px; /* Explicit viewport height */
+            width: 1920px; /* Explicit viewport width */
+            overflow: hidden; /* Prevent any scrolling */
+            font-family: Arial, sans-serif;
+            font-size: 14px; /* Compact font */
+        }
+        header {
+            display: flex; /* Center vertically and horizontally */
+            align-items: center;
+            justify-content: center;
+        }
+        header h1 {
+            font-size: 40px; /* Unchanged */
+        }
+        .main-content {
+            max-width: 1920px;
+            width: 100%;
+            height: 990px; /* Unchanged */
+            padding: 10px; /* Consistent padding */
+        }
+        .main-content.grid-home {
+            display: grid;
+            grid-template-columns: repeat(4, 1fr);
+            grid-template-rows: 400px 380px; /* Reduced rows */
+            gap: 5px; /* Minimal gap */
+            height: 785px; /* 400px + 5px + 380px */
+            margin-top: -10px; /* Unchanged */
+        }
+        .nav-group {
+            box-shadow: 0 1px 2px rgba(0,0,0,0.2);
+            display: flex;
+            flex-direction: column;
+        }
+        .nav-group__title {
+            background-color: #eee;
+            padding: 0 3px; /* Unchanged */
+            height: 30px; /* Reduced from 45px */
+            display: flex; /* Center vertically and horizontally */
+            align-items: center;
+            justify-content: center;
+        }
+        .nav-group__title h2 {
+            font-size: 28px; /* Unchanged */
+        }
+        .nav-group__content {
+            padding: 3px;
+            display: flex;
+            flex-direction: column;
+            gap: 3px;
+            flex-grow: 1;
+            overflow: hidden; /* Prevent overflow */
+
+
+            
+        }
+        .nav-group.seasons {
+            height: 785px; /* Adjusted for new grid height */
+        }
+        .nav-group.seasons > .nav-group__content {
+            display: grid;
+            grid-template-columns: repeat(2, 1fr);
+            grid-gap: 3px;
+            padding: 3px;
+            height: 755px; /* 785px - 30px title */
+        }
+        .nav-group.seasons a {
+            height: 160px; 
+            padding: 3px;
+            width: 100%;
+            display: flex;
+            align-items: center;
+            justify-content: center;
+            background-color: #f0f0f0;
+            text-decoration: none;
+            color: #333;
+            font-size: 0px;
+            overflow: hidden;
+            text-overflow: ellipsis;
+            white-space: nowrap;
+        }
+        .nav-group.seasons a:hover {
+            background-color: #ddd;
+        }
+        footer {
+            position: absolute;
+            bottom: 0;
+            width: 100%;
+            display: flex; /* Center vertically and horizontally */
+            align-items: center;
+            justify-content: center;
+            font-size: 20px; /* Unchanged */
+        }
+        footer a {
+            color: #007bff;
+            text-decoration: none;
+        }
+        footer a:hover {
+            text-decoration: underline;
+        }
+
+        
+    </style>
 </head>
 <body>
     <header>
@@ -15,9 +124,9 @@
     </header>
 
     <div class="main-content grid-home">
-        <div class="nav-group about" aria-label="About Us section" role="region">
+        <div class="nav-group about" style="grid-area: 1 / 1 / 2 / 2;" aria-label="About Us section" role="region">
             <div class="nav-group__title">
-                <h2>About us</h2>
+                <h2>ABOUT US</h2>
             </div>
             <div class="nav-group__content">
                 <p>
@@ -28,9 +137,9 @@
                 </p>
             </div>
         </div>
-        <div class="nav-group mission" aria-label="Our Mission section" role="region">
+        <div class="nav-group mission" style="grid-area: 1 / 2 / 2 / 3;" aria-label="Our Mission section" role="region">
             <div class="nav-group__title">
-                <h2>Our mission</h2>
+                <h2>OUR MISSION</h2>
             </div>
             <div class="nav-group__content">
                 <p>
@@ -44,9 +153,18 @@
                 </p>
             </div>
         </div>
-        <div class="nav-group maps" aria-label="Maps section" role="region">
+        <div class="nav-group docs" style="grid-area: 1 / 3 / 2 / 4;" aria-label="Documents section" role="region">
             <div class="nav-group__title">
-                <h2>Maps</h2>
+                <h2>DOCUMENTS</h2>
+            </div>
+            <div class="nav-group__content">
+                <a href="#">Charter</a>
+                <a href="https://github.com/Alchemy-AOE-Community/CHEM-Published-Specifications">Specifications</a>
+            </div>
+        </div>
+        <div class="nav-group maps" style="grid-area: 2 / 1 / 3 / 2;" aria-label="Maps section" role="region">
+            <div class="nav-group__title">
+                <h2>MAPS</h2>
             </div>
             <div class="nav-group__content">
                 <a href="https://github.com/Alchemy-AOE-Community/CHEM-Competition-Map-Packs">League Collections</a>
@@ -54,28 +172,9 @@
                 <a href="https://github.com/Alchemy-AOE-Community/CHEM-Random-Map-Scripts/tree/_About_">Repository</a>
             </div>
         </div>
-        <div class="nav-group people" aria-label="People section" role="region">
+        <div class="nav-group refs" style="grid-area: 2 / 2 / 3 / 3;" aria-label="References section" role="region">
             <div class="nav-group__title">
-                <h2>People</h2>
-            </div>
-            <div class="nav-group__content">
-                <a href="../Map_Team.html">Map Scripters</a>
-                <a href="#">Map Quality Team</a>
-                <a href="#">Content Creators</a>
-            </div>
-        </div>
-        <div class="nav-group docs" aria-label="Documents section" role="region">
-            <div class="nav-group__title">
-                <h2>Documents</h2>
-            </div>
-            <div class="nav-group__content">
-                <a href="#">Charter</a>
-                <a href="https://github.com/Alchemy-AOE-Community/CHEM-Published-Specifications">Specifications</a>
-            </div>
-        </div>
-        <div class="nav-group refs" aria-label="References section" role="region">
-            <div class="nav-group__title">
-                <h2>RMS references</h2>
+                <h2>RMS REFERENCES</h2>
             </div>
             <div class="nav-group__content">
                 <a href="https://docs.google.com/document/d/1jnhZXoeL9mkRUJxcGlKnO98fIwFKStP_OBozpr0CHXo/">Scripting Guide</a>
@@ -84,8 +183,18 @@
                 <a href="https://ugc.aoe2.rocks/general/">Game Mechanics</a>
                 <a href="https://ca2map.streamlit.app/">Icon Creator</a>
             </div>
-        </div> 
-        <div class="nav-group seasons" aria-label="Competitions section" role="region">
+        </div>
+        <div class="nav-group people" style="grid-area: 2 / 3 / 3 / 4;" aria-label="People section" role="region">
+            <div class="nav-group__title">
+                <h2>People</h2>
+            </div>
+            <div class="nav-group__content">
+                <a href="../Map_Team.html"> Map Scripters</a>
+                <a href="#">Map Quality Team</a>
+                <a href="#">Content Creators</a>
+            </div>
+        </div>
+        <div class="nav-group seasons" style="grid-area: 1 / 4 / 3 / 5;" aria-label="Competitions section" role="region">
             <div class="nav-group__title">
                 <h2>Competitions</h2>
             </div>
