--- a/index.html
+++ b/index.html
@@ -66,9 +66,19 @@
             gap: 3px;
             flex-grow: 1;
             overflow: hidden; /* Prevent overflow */
-
-
-            
+        }
+        .nav-group.about > .nav-group__content,
+        .nav-group.mission > .nav-group__content {
+            font-size: 18px; /* Further increased font size for About Us and Our Mission */
+            padding: 10px; /* Increased padding for About Us and Our Mission */
+        }
+        .nav-group.about > .nav-group__content p,
+        .nav-group.mission > .nav-group__content p {
+            margin-bottom: 10px; /* Add spacing between paragraphs */
+        }
+        .nav-group.about > .nav-group__content p:last-child,
+        .nav-group.mission > .nav-group__content p:last-child {
+            margin-bottom: 0; /* Remove bottom margin from last paragraph */
         }
         .nav-group.seasons {
             height: 785px; /* Adjusted for new grid height */
@@ -114,8 +124,6 @@
         footer a:hover {
             text-decoration: underline;
         }
-
-        
     </style>
 </head>
 <body>
@@ -153,7 +161,7 @@
                 </p>
             </div>
         </div>
-        <div class="nav-group docs" style="grid-area: 1 / 3 / 2 / 4;" aria-label="Documents section" role="region">
+        <div class="nav-group docs" style="grid-area: 1 / 3 / 2 / 4; background-color: rgba(255,255,255,0.3); background-image: url('images/Image_Documents.jpg');" aria-label="Documents section" role="region">
             <div class="nav-group__title">
                 <h2>DOCUMENTS</h2>
             </div>
@@ -162,7 +170,7 @@
                 <a href="https://github.com/Alchemy-AOE-Community/CHEM-Published-Specifications">Specifications</a>
             </div>
         </div>
-        <div class="nav-group maps" style="grid-area: 2 / 1 / 3 / 2;" aria-label="Maps section" role="region">
+        <div class="nav-group maps" style="grid-area: 2 / 1 / 3 / 2; background-color: rgba(255,255,255,0.3); background-image: url('images/Image_Maps.jpg');" aria-label="Maps section" role="region">
             <div class="nav-group__title">
                 <h2>MAPS</h2>
             </div>
@@ -172,7 +180,7 @@
                 <a href="https://github.com/Alchemy-AOE-Community/CHEM-Random-Map-Scripts/tree/_About_">Repository</a>
             </div>
         </div>
-        <div class="nav-group refs" style="grid-area: 2 / 2 / 3 / 3;" aria-label="References section" role="region">
+        <div class="nav-group refs" style="grid-area: 2 / 2 / 3 / 3; background-color: rgba(255,255,255,0.3); background-image: url('images/Image_OutsideRefs.jpg');" aria-label="References section" role="region">
             <div class="nav-group__title">
                 <h2>RMS REFERENCES</h2>
             </div>
@@ -184,9 +192,9 @@
                 <a href="https://ca2map.streamlit.app/">Icon Creator</a>
             </div>
         </div>
-        <div class="nav-group people" style="grid-area: 2 / 3 / 3 / 4;" aria-label="People section" role="region">
+        <div class="nav-group people" style="grid-area: 2 / 3 / 3 / 4; background-color: rgba(255,255,255,0.3); background-image: url('images/Image_People.jpg');" aria-label="People section" role="region">
             <div class="nav-group__title">
-                <h2>People</h2>
+                <h2>PEOPLE</h2>
             </div>
             <div class="nav-group__content">
                 <a href="../Map_Team.html"> Map Scripters</a>
@@ -194,9 +202,9 @@
                 <a href="#">Content Creators</a>
             </div>
         </div>
-        <div class="nav-group seasons" style="grid-area: 1 / 4 / 3 / 5;" aria-label="Competitions section" role="region">
+        <div class="nav-group seasons" style="grid-area: 1 / 4 / 3 / 5; background-color: rgba(255,255,255,0.3); background-image: url('images/Season_Mashup.jpg');" aria-label="Competitions section" role="region">
             <div class="nav-group__title">
-                <h2>Competitions</h2>
+                <h2>COMPETITIONS</h2>
             </div>
             <div class="nav-group__content">
                 <a href="ALS1.html">ALS1</a>
