--- a/index.html
+++ b/index.html
@@ -9,89 +9,115 @@
     <link rel="stylesheet" href="style/style.css" />
     <title>Alchemy AOE Community</title>
     <style>
+        :root {
+            --spacing: 10px;
+            --title-height: 30px;
+            --grid-gap: 5px;
+        }
+
         * {
             margin: 0;
             padding: 0;
             box-sizing: border-box;
         }
+
         html, body {
-            height: 1080px; /* Explicit viewport height */
-            width: 1920px; /* Explicit viewport width */
-            overflow: hidden; /* Prevent any scrolling */
+            width: 1920px;
+            height: 1080px;
+            overflow: hidden;
             font-family: Arial, sans-serif;
-            font-size: 14px; /* Compact font */
+            font-size: 14px;
         }
+
         header {
-            display: flex; /* Center vertically and horizontally */
+            display: flex;
             align-items: center;
             justify-content: center;
+            width: 100%;
+            height: 50px;
+            margin: 0; /* Touches viewport top */
         }
+
         header h1 {
-            font-size: 40px; /* Unchanged */
+            font-size: 40px;
         }
+
         .main-content {
             max-width: 1920px;
             width: 100%;
-            height: 990px; /* Unchanged */
-            padding: 10px; /* Consistent padding */
+            height: 850px; /* 1080px - 50px header - 30px footer - 150px buffer */
+            padding: var(--spacing); /* 10px on all sides */
+            margin: 0 auto;
         }
+
         .main-content.grid-home {
             display: grid;
             grid-template-columns: repeat(4, 1fr);
-            grid-template-rows: 400px 380px; /* Reduced rows */
-            gap: 5px; /* Minimal gap */
-            height: 785px; /* 400px + 5px + 380px */
-            margin-top: -10px; /* Unchanged */
+            grid-template-rows: 413px 412px; /* 825px total + 5px gap = 830px */
+            gap: var(--grid-gap);
+            height: 830px; /* Fits within main-content after padding */
+            background-color: rgba(0, 0, 0, 0.05); /* Debug: Visualize grid bounds */
         }
+
         .nav-group {
             box-shadow: 0 1px 2px rgba(0,0,0,0.2);
             display: flex;
             flex-direction: column;
+            background-clip: content-box; /* Prevent image/shadow overflow */
         }
+
         .nav-group__title {
             background-color: #eee;
-            padding: 0 3px; /* Unchanged */
-            height: 30px; /* Reduced from 45px */
-            display: flex; /* Center vertically and horizontally */
+            padding: 0 3px;
+            height: var(--title-height);
+            display: flex;
             align-items: center;
             justify-content: center;
         }
+
         .nav-group__title h2 {
-            font-size: 28px; /* Unchanged */
+            font-size: 28px;
         }
+
         .nav-group__content {
             padding: 3px;
             display: flex;
             flex-direction: column;
             gap: 3px;
             flex-grow: 1;
-            overflow: hidden; /* Prevent overflow */
+            overflow: hidden;
         }
+
         .nav-group.about > .nav-group__content,
         .nav-group.mission > .nav-group__content {
-            font-size: 18px; /* Further increased font size for About Us and Our Mission */
-            padding: 10px; /* Increased padding for About Us and Our Mission */
+            font-size: 18px;
+            padding: 10px;
         }
+
         .nav-group.about > .nav-group__content p,
         .nav-group.mission > .nav-group__content p {
-            margin-bottom: 10px; /* Add spacing between paragraphs */
+            margin-bottom: 10px;
         }
+
         .nav-group.about > .nav-group__content p:last-child,
         .nav-group.mission > .nav-group__content p:last-child {
-            margin-bottom: 0; /* Remove bottom margin from last paragraph */
+            margin-bottom: 0;
         }
+
         .nav-group.seasons {
-            height: 785px; /* Adjusted for new grid height */
+            height: 100%; /* Full grid height */
         }
+
         .nav-group.seasons > .nav-group__content {
             display: grid;
             grid-template-columns: repeat(2, 1fr);
             grid-gap: 3px;
             padding: 3px;
-            height: 755px; /* 785px - 30px title */
+            height: calc(100% - var(--title-height)); /* 830px - 30px = 800px */
         }
+
         .nav-group.seasons a {
-            height: 160px; 
+            height: 140px; /* 800px / 8 = 100px */
             padding: 3px;
             width: 100%;
             display: flex;
@@ -100,29 +126,94 @@
             background-color: #f0f0f0;
             text-decoration: none;
             color: #333;
-            font-size: 0px;
+            font-size: 0rem;
             overflow: hidden;
             text-overflow: ellipsis;
             white-space: nowrap;
         }
+
         .nav-group.seasons a:hover {
             background-color: #ddd;
         }
+
         footer {
             position: absolute;
-            bottom: 0;
+            bottom: 0; /* Touches viewport bottom */
             width: 100%;
-            display: flex; /* Center vertically and horizontally */
+            height: 30px;
+            display: flex;
             align-items: center;
             justify-content: center;
-            font-size: 20px; /* Unchanged */
+            font-size: 20px;
+            line-height: 20px; /* Match font-size */
+            background-color: #f8f8f8; /* Debug: Visualize footer */
+            z-index: 10; /* Above grid content */
         }
+
+        footer p, footer a {
+            margin: 0;
+            padding: 0;
+            line-height: 20px;
+        }
+
         footer a {
             color: #007bff;
             text-decoration: none;
         }
+
         footer a:hover {
             text-decoration: underline;
+        }
+
+        /* Responsive styles for smaller screens */
+        @media (max-width: 1919px) {
+            html, body {
+                overflow-y: auto;
+            }
+            .main-content.grid-home {
+                display: flex;
+                flex-direction: column;
+                height: auto;
+                padding-bottom: 50px;
+                background-color: transparent; /* Reset debug background */
+            }
+            .nav-group {
+                height: auto;
+                min-height: 400px;
+            }
+            .nav-group.seasons {
+                height: auto;
+                min-height: 785px;
+            }
+            .nav-group.seasons > .nav-group__content {
+                height: auto;
+                min-height: 755px;
+            }
+            footer {
+                position: relative;
+                margin-top: 20px;
+                background-color: transparent; /* Reset debug background */
+            }
+        }
+
+        /* Adjustments for larger screens */
+        @media (min-width: 1920px) {
+            html, body {
+                height: 1080px;
+                overflow: hidden;
+                margin: 0;
+            }
+            .main-content {
+                height: 850px;
+                margin: 0 auto;
+            }
+            .main-content.grid-home {
+                grid-template-rows: 413px 412px;
+                height: 830px;
+            }
+            .nav-group.seasons > .nav-group__content {
+                height: calc(100% - var(--title-height));
+            }
         }
     </style>
 </head>
@@ -166,8 +257,8 @@
                 <h2>DOCUMENTS</h2>
             </div>
             <div class="nav-group__content">
-                <a href="#">Charter</a>
-                <a href="https://github.com/Alchemy-AOE-Community/CHEM-Published-Specifications">Specifications</a>
+                <a href="#" style="font-size: 1rem;">Charter</a>
+                <a href="https://github.com/Alchemy-AOE-Community/CHEM-Published-Specifications" style="font-size: 1rem;">Specifications</a>
             </div>
         </div>
         <div class="nav-group maps" style="grid-area: 2 / 1 / 3 / 2; background-color: rgba(255,255,255,0.3); background-image: url('images/Image_Maps.jpg');" aria-label="Maps section" role="region">
@@ -175,9 +266,9 @@
                 <h2>MAPS</h2>
             </div>
             <div class="nav-group__content">
-                <a href="https://github.com/Alchemy-AOE-Community/CHEM-Competition-Map-Packs">League Collections</a>
-                <a href="https://github.com/f-istvan/Current-Alchemy-League-Map-Downloader/tree/main">Autodownloader</a>
-                <a href="https://github.com/Alchemy-AOE-Community/CHEM-Random-Map-Scripts/tree/_About_">Repository</a>
+                <a href="https://github.com/Alchemy-AOE-Community/CHEM-Competition-Map-Packs" style="font-size: 1rem;">League Collections</a>
+                <a href="https://github.com/f-istvan/Current-Alchemy-League-Map-Downloader/tree/main" style="font-size: 1rem;">Autodownloader</a>
+                <a href="https://github.com/Alchemy-AOE-Community/CHEM-Random-Map-Scripts/tree/_About_" style="font-size: 1rem;">Repository</a>
             </div>
         </div>
         <div class="nav-group refs" style="grid-area: 2 / 2 / 3 / 3; background-color: rgba(255,255,255,0.3); background-image: url('images/Image_OutsideRefs.jpg');" aria-label="References section" role="region">
@@ -185,11 +276,11 @@
                 <h2>RMS REFERENCES</h2>
             </div>
             <div class="nav-group__content">
-                <a href="https://docs.google.com/document/d/1jnhZXoeL9mkRUJxcGlKnO98fIwFKStP_OBozpr0CHXo/">Scripting Guide</a>
-                <a href="https://docs.google.com/spreadsheets/d/1llyn7FWKEtmss_WE-6hinMItpsV-h-6qsY8xBlkxUzw/">Constants List</a>
-                <a href="https://docs.google.com/spreadsheets/d/1Fg4BM8dY0FoJ5yoQtL5S4f9LEcMIrYbH0skrFBnrS14/">Terrain List</a>
-                <a href="https://ugc.aoe2.rocks/general/">Game Mechanics</a>
-                <a href="https://ca2map.streamlit.app/">Icon Creator</a>
+                <a href="https://docs.google.com/document/d/1jnhZXoeL9mkRUJxcGlKnO98fIwFKStP_OBozpr0CHXo/" style="font-size: 1rem;">Scripting Guide</a>
+                <a href="https://docs.google.com/spreadsheets/d/1llyn7FWKEtmss_WE-6hinMItpsV-h-6qsY8xBlkxUzw/" style="font-size: 1rem;">Constants List</a>
+                <a href="https://docs.google.com/spreadsheets/d/1Fg4BM8dY0FoJ5yoQtL5S4f9LEcMIrYbH0skrFBnrS14/" style="font-size: 1rem;">Terrain List</a>
+                <a href="https://ugc.aoe2.rocks/general/" style="font-size: 1rem;">Game Mechanics</a>
+                <a href="https://ca2map.streamlit.app/" style="font-size: 1rem;">Icon Creator</a>
             </div>
         </div>
         <div class="nav-group people" style="grid-area: 2 / 3 / 3 / 4; background-color: rgba(255,255,255,0.3); background-image: url('images/Image_People.jpg');" aria-label="People section" role="region">
@@ -197,9 +288,9 @@
                 <h2>PEOPLE</h2>
             </div>
             <div class="nav-group__content">
-                <a href="../Map_Team.html"> Map Scripters</a>
-                <a href="#">Map Quality Team</a>
-                <a href="#">Content Creators</a>
+                <a href="../Map_Team.html" style="font-size: 1rem;"> Map Scripters</a>
+                <a href="#" style="font-size: 1rem;">Map Quality Team</a>
+                <a href="#" style="font-size: 1rem;">Content Creators</a>
             </div>
         </div>
         <div class="nav-group seasons" style="grid-area: 1 / 4 / 3 / 5; background-color: rgba(255,255,255,0.3); background-image: url('images/Season_Mashup.jpg');" aria-label="Competitions section" role="region">
